--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
 
 
     <string name="description">%1$s %2$d°</string>
+    <string name="vertical_description">%1$.2f°\n垂直</string>
+    <string name="horizontal_description">%1$.2f°\n水平</string>
 
     <string-array name="direction">
         <item>北</item>
